<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.RegisterActivity">

    <EditText
        android:id="@+id/input_name_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="@string/name_pholder"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_last_name_register"
        android:layout_width="0dp"
        android:hint="@string/last_name_pholder"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/input_name_register"
        app:layout_constraintStart_toStartOf="@+id/input_name_register"
        app:layout_constraintTop_toBottomOf="@+id/input_name_register" />

    <EditText
        android:id="@+id/input_card_number_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/card_number_pholder"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/input_last_name_register"
        app:layout_constraintStart_toStartOf="@+id/input_last_name_register"
        app:layout_constraintTop_toBottomOf="@+id/input_last_name_register" />

    <EditText
        android:id="@+id/input_registration_number_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/registration_number_pholder"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/input_card_number_register"
        app:layout_constraintStart_toStartOf="@+id/input_card_number_register"
        app:layout_constraintTop_toBottomOf="@+id/input_card_number_register" />

    <EditText
        android:id="@+id/input_phone_number_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone_pholder"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/input_registration_number_register"
        app:layout_constraintStart_toStartOf="@+id/input_registration_number_register"
        app:layout_constraintTop_toBottomOf="@+id/input_registration_number_register" />

    <EditText
        android:id="@+id/input_password_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/password_pholder"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/input_phone_number_register"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/input_phone_number_register"
        app:layout_constraintTop_toBottomOf="@+id/input_email_register" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_confirm_password_register" />

    <EditText
        android:id="@+id/input_confirm_password_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/confirm_password_pholder"
        app:layout_constraintEnd_toEndOf="@+id/input_password_register"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/input_password_register"
        app:layout_constraintTop_toBottomOf="@+id/input_password_register" />

    <EditText
        android:id="@+id/input_email_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/email_pholder"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/input_phone_number_register"
        app:layout_constraintStart_toStartOf="@+id/input_phone_number_register"
        app:layout_constraintTop_toBottomOf="@+id/input_phone_number_register" />
</androidx.constraintlayout.widget.ConstraintLayout>